- fixed: DoT and HoT does not add spell power, but uses periodic damage bonuses instead / crit damage (thanks to Shyax)
- to test: DruidBalanceImprovedMoonfire, DruidBalanceNaturesGrace, DruidBalanceMoonfury, DruidFeralCombatThickHide